# XelToFab

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: deploy-website.yml  publish-pypi.yml
benchmarks/after_remesh/: corner_3d_vf30_s0.stl  corner_3d_vf50_s0.stl  heat_cond_51_s0.stl  heat_cond_51_s1.stl  metrics.json  summary.md  synthetic_sphere.stl  synthetic_sphere_sdf.stl  thermoelastic_16_s0.stl
benchmarks/after_tier2/: corner_3d_vf50_s0.stl  metrics.json  summary.md  synthetic_sphere_sdf.stl  thermoelastic_16_s0.stl
benchmarks/baseline/: corner_3d_vf30_s0.stl  heat_cond_51_s0.stl  heat_cond_51_s1.stl  metrics.json  summary.md
data/examples/: README.md  beams_2d_100x200_sample0.npy  beams_2d_100x200_sample1.npy  beams_2d_25x50_sample1.npy  beams_2d_25x50_sample2.npy  beams_2d_50x100_sample0.npy  beams_2d_50x100_sample2.npy  corner_3d_20x20x20_vf30_sample0.npy  corner_3d_20x20x20_vf50_sample0.npy  heat_conduction_3d_51x51x51_sample2.npy  thermoelastic_3d_16x16x16_sample1.npy
docs/: ARCHITECTURE.md  PROGRESS.md  TODO.md  TO_fixtures_integration_analysis.md  generate_slides.py
docs/plans/: .gitkeep  2026-02-24-mvp-pipeline-design.md  2026-02-24-mvp-pipeline-impl.md  2026-02-25-multi-format-io-design.md  2026-02-25-multi-format-io-impl.md  2026-03-09-field-type-aware-extraction-design.md  2026-03-09-field-type-aware-extraction-impl.md
examples/data/: README.md  beams_2d_100x200_sample2.npy  beams_2d_25x50_sample0.npy  beams_2d_50x100_sample1.npy  heat_conduction_3d_51x51x51_sample0.npy  heat_conduction_3d_51x51x51_sample1.npy  thermoelastic_3d_16x16x16_sample0.npy
notebooks/: README.md  demo.py  demo_formats.py
scripts/: benchmark_baseline.py  generate_bunny_sdf.py  generate_doc_images.py
src/xeltocad/: __init__.py  cli.py  extract.py  io.py  pipeline.py  preprocess.py  smooth.py  state.py  viz.py
src/xeltocad/loaders/: __init__.py  csv_loader.py  hdf5_loader.py  matlab_loader.py  numpy_loader.py  vtk_loader.py
src/xeltofab/: __init__.py  cli.py  decimate.py  extract.py  field_plots.py  io.py  pipeline.py  preprocess.py  quality.py  quality_plots.py  remesh.py  repair.py  sdf_eval.py  smooth.py  state.py  viz.py
src/xeltofab/_vendor/: __init__.py
src/xeltofab/loaders/: __init__.py  csv_loader.py  hdf5_loader.py  matlab_loader.py  numpy_loader.py  vtk_loader.py
tests/: conftest.py  test_cli.py  test_decimate.py  test_engibench.py  test_extract.py  test_extract_dc.py  test_field_plots.py  test_io.py  test_pipeline.py  test_preprocess.py  test_quality.py  test_quality_plots.py  test_remesh.py  test_repair.py  test_sdf_eval.py  test_smooth.py  test_state.py  test_viz.py
tests/test_loaders/: test_cli_formats.py  test_csv_loader.py  test_dispatch.py  test_hdf5_loader.py  test_matlab_loader.py  test_numpy_loader.py  test_vtk_loader.py
website/: mdx-components.tsx  package-lock.json  package.json  source.config.ts
website/app/: global.css  layout.tsx
website/app/(home)/: page.tsx
website/components/: ImageCompare.tsx  MeshViewer.tsx
website/content/docs/: index.mdx  meta.json
website/lib/: layout.shared.ts  source.ts
(+36 files in other folders)
