[project]
name = "xeltofab"
version = "0.2.2"
description = "Design fields to fabrication-ready geometry"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Zhao MA", email = "zhma@ethz.ch" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "trimesh",
  "pydantic>=2.12.5",
  "matplotlib>=3.10.8",
  "click>=8.3.1",
  "marimo>=0.20.4",
  "plotly>=6.6.0",
  "pyfqmr>=0.5.0",
]

[project.optional-dependencies]
vtk = ["pyvista>=0.43"]
hdf5 = ["h5py>=3.10"]
mesh-quality = ["pymeshlab>=2023.12", "gpytoolbox>=0.3.0"]
manifold = ["manifold3d>=3.0"]
cuda = ["isoext>=0.5"]
all-formats = ["pyvista>=0.43", "h5py>=3.10"]
all = ["pyvista>=0.43", "h5py>=3.10", "pymeshlab>=2023.12", "gpytoolbox>=0.3.0", "manifold3d>=3.0"]

[project.urls]
Homepage = "https://xel-to-fab.vercel.app"
Documentation = "https://xel-to-fab.vercel.app"
Repository = "https://github.com/xarthurx/XelToFab"
Issues = "https://github.com/xarthurx/XelToFab/issues"

[project.scripts]
xtf = "xeltofab.cli:main"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.20.2",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
